<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".newUser">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo_no_border" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/manage_students_accounts"
        android:textAlignment="center"
        android:textColor="@color/logoGrey"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/studentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/studentEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="@color/logoGrey"
        android:textColorHint="@color/logoGrey"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/studentPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/student_password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/logoGrey"
        android:textColorHint="@color/logoGrey"
        android:textSize="14sp" />

    <Button
        android:id="@+id/createBu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/logoGrey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cancelBu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/logoGrey"
        android:textSize="12sp" />

</LinearLayout>