<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/space24"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo_no_border" />

    <TextView
        android:id="@+id/signinTV"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="@color/logoGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/space23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="no"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="@color/logoGrey" />

    <TextView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="no"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="@color/logoGrey" />

    <TextView
        android:id="@+id/space13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stloginBu"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/stloginTV"
        android:textAllCaps="false"
        android:textColor="@color/logoGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/space21"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/adloginBu"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/open_sans"
        android:text="@string/adloginTV"
        android:textAllCaps="false"
        android:textColor="@color/logoGrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/space22"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/guestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/guestLogin"
        android:textColor="@color/logoGrey"
        android:textSize="14sp" />
</LinearLayout>