<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lostItemNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="@string/lost_iterm_name"
            android:textColor="@color/logoGrey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lostItemDescTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:text="@string/lost_item_description"
            android:textColor="@color/logoGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/itemPlaceFoundTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:text="@string/where_was_the_item_found"
            android:textColor="@color/logoGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/studentEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:text="@string/studentEmail"
            android:textColor="@color/logoGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/studentNumTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/open_sans"
            android:gravity="start"
            android:text="@string/studentNum"
            android:textColor="@color/logoGrey"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/deleteBu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/backgroundColor"
            android:contentDescription="@string/todo"
            android:foregroundGravity="right"
            android:visibility="gone"
            app:srcCompat="@drawable/delete_ticket" />

    </LinearLayout>
</LinearLayout>